--- a/3-Incidence.qmd
+++ b/3-Incidence.qmd
@@ -2,6 +2,8 @@
 title: "Age-stratified incidence of invasive non-typhoidal Salmonella at Queen Elizabeth Central Hospital (QECH), Blantyre, Malawi 1996-2024"
 format:    
   pdf:
+    mainfont: Didot
+    linestretch: 1.5   # Set line spacing to 1.5
     geometry:
       - top=20mm
       - bottom=20mm
