--- a/5-Descriptive.qmd
+++ b/5-Descriptive.qmd
@@ -2,6 +2,8 @@
 title: "Descriptive epidemiology of risk factors and enteric non-typhoidal salmonella in children under 5 years in Chikwawa"
 format:    
   pdf:
+    mainfont: Didot
+    linestretch: 1.5   # Set line spacing to 1.5
     geometry:
       - top=20mm
       - bottom=20mm
@@ -54,7 +56,6 @@ seqdat <- import(here("data", "5_data", "2023.06.29.SAiNTS_seq_results.xlsx"))
 watsan <- import(here("data", "5_data", "WatSan.xlsx"))
 
 master2 <- master %>% left_join(watsan)
-table(master2$drink_wat_desc)
 
 watsancheck <- master2 %>% 
   select(c(pid, drinking_water_src...7, drink_wat_desc, cooking_water_src, cooking_wat_desc, toilet_type...3, toilet_type...4, share_with, share_toilet_des, bathing_water_src, bathing_wat_desc))
@@ -84,14 +85,16 @@ StMontN <- EAperClus %>% filter(cluster=="St Montfort")
 ageclus <- master %>% 
   group_by(cluster) %>% 
   summarise(age_mean = mean(calc_age_months, na.rm=T),
-            age_sd = sd(calc_age_months, na.rm=T))
+            age_sd = sd(calc_age_months, na.rm=T)) %>% 
+  mutate(across(where(is.numeric), round, 2))
 ageChi <- ageclus %>% filter(cluster=="Chikwawa")
 ageMon <- ageclus %>% filter(cluster=="St Montfort")
 
 pov <- master %>% 
   group_by(cluster) %>% 
   summarise(mean = mean(pov_score, na.rm=T),
-            sd = sd(pov_score, na.rm=T))
+            sd = sd(pov_score, na.rm=T)) %>% 
+  mutate(across(where(is.numeric), round, 2))
 povChi <- pov %>% filter(cluster=="Chikwawa")
 povMon <- pov %>% filter(cluster=="St Montfort")
 
@@ -152,12 +155,20 @@ seq_sum <- seqdat %>%
   ungroup() %>% 
   group_by(cgmlst_subspecies, `O antigen prediction`) %>%
   summarise(count = n(),
-            `percent (%)` = round(count/total, digits=3)*100) %>% 
+            percent = round(count/total, digits=3)*100) %>% 
   slice_head(n=1) %>% 
   ungroup()
 
-seq_sum_ent <- seq_sum %>% subset(cgmlst_subspecies=="enterica", c(`O antigen prediction`, count, `percent (%)`))
-seq_sum_sal <- seq_sum %>% subset(cgmlst_subspecies=="salamae", c(`O antigen prediction`, count, `percent (%)`))
+seq_sum_total <- seq_sum %>% summarise(count_tot = sum(count, na.rm=T))
+
+seq_sum_ent <- seq_sum %>% subset(cgmlst_subspecies=="enterica", c(`O antigen prediction`, count, percent))
+seq_sum_sal <- seq_sum %>% subset(cgmlst_subspecies=="salamae", c(`O antigen prediction`, count, percent))
+tot_ent <- seq_sum_ent %>% summarise(count_tot = sum(count, na.rm=T))
+tot_sal <-seq_sum_sal %>% summarise(count_tot = sum(count, na.rm=T))
+O4_ent <- seq_sum_ent %>% filter(`O antigen prediction`=="4")
+O4_sal <- seq_sum_sal %>% filter(`O antigen prediction`=="4")
+O9_ent <- seq_sum_ent %>% filter(`O antigen prediction`=="9")
+O9_sal <- seq_sum_sal %>% filter(`O antigen prediction`=="9")
 
 ## MOnthly
 seasonStool <- master %>% 
@@ -187,17 +198,17 @@ min_mth_stool <- seasonStool %>% slice_min(Salm_pos_percent)
 
 ### SAiNTS cohort demographic and socioeconomic characteristics
 
-`{r} print(n$n)` children aged 0-5 were recruited across `{r} print(sum(EA_clus$n))` EAs; `{r} print(chiN$n)` EA's in Chikwawa with a mean number of children per EA of `{r} print(round(chiN$mean_no, digits=1))`, range `{r} print(chiN$range)` equalling a total of `{r} print(nchik$n)` children. In St Montfort `{r} print(StMontN$n)` EA's with a mean number of children per EA of `{r} print(round(StMontN$mean_no, digits=1))`, range `{r} print(StMontN$range)`, with a total of `{r} print(nmont$n)` children. The geographical locations of the selected EA's are shown in @fig-selectedEA. The mean age of recruited children in Chikwawa was `{r} print(ageChi$age_mean)` (SD: `{r} print(ageChi$age_sd)`) and `{r} print(ageMon$age_mean)` (SD: `{r} print(ageMon$age_sd)`. The distribution of ages by 1 year age groups is shown in @tbl-cohortEA. Mean poverty scores were `{r} print(povChi$mean)` (SD: `{r} print(povChi$sd)`) in Chikwawa and `{r} print(povMon$mean)` (SD: `{r} print(povMon$sd)`) in St Montfort, and distribution in each cluster by poverty quintile is shown in @tbl-cohortEA .
+`{r} print(n$n)` children aged 0-5 were recruited across `{r} print(sum(EA_clus$n))` EAs; `{r} print(chiN$n)` EA's in Chikwawa with a mean number of children per EA of `{r} print(round(chiN$mean_no, digits=1))`, range `{r} print(chiN$range)` equalling a total of `{r} print(nchik$n)` children. In St Montfort `{r} print(StMontN$n)` EA's with a mean number of children per EA of `{r} print(round(StMontN$mean_no, digits=1))`, range `{r} print(StMontN$range)`, with a total of `{r} print(nmont$n)` children. The geographical locations of the selected EA's are shown in @fig-EA . The mean age of recruited children in Chikwawa was `{r} print(ageChi$age_mean)` (SD: `{r} print(ageChi$age_sd)`) and `{r} print(ageMon$age_mean)` (SD: `{r} print(ageMon$age_sd)`). The distribution of ages by 1 year age groups is shown in @tbl-cohortEA. Mean poverty scores were `{r} print(povChi$mean)` (SD: `{r} print(povChi$sd)`) in Chikwawa and `{r} print(povMon$mean)` (SD: `{r} print(povMon$sd)`) in St Montfort, and distribution in each cluster by poverty quintile is shown in @tbl-cohortEA.
 
 ::: {layout-nrow="2"}
-![Selected Enumerations from the EPIMAL study census](figures/5_images/clusterMap.png){width="300"} ![Selected Enumeration Areas (EA) for the SAiNTS study from the EPIMAL Study Clusters (Chikwawa = Pink, St Montfort = Purple)](figures/5_images/selectedEA.png){#fig-selectedEA width="300"}
+![Selected Enumerations from the EPIMAL study census](figures/5_images/clusterMap.png){width="300"} ![Selected Enumeration Areas (EA) for the SAiNTS study from the EPIMAL Study Clusters (Chikwawa = Pink, St Montfort = Purple)](figures/5_images/selectedEA.png){#fig-EA width="300"}
 :::
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE, fig.align = "centre", fig.width = 6, fig.height=7, out.width = "6.5in"}
 #| tbl-cap: Descriptive summary of children recruited across enumeration areas, by cluster. Chikwawa cluster did not receieve RTS,S/AS01 malaria vaccine. St Montfort did recieve RTS,S AS01 malaria vaccine
 #| label: tbl-cohortEA
 
-master %>% 
+descript <- master %>% 
   select(c(cluster, calc_age_months, AGEGROUP_yr, gender, pov_score, pov_score_cat,toilet_type, washing_water_src, drinking_water_src, treat_dwater, mrdt_result, d90_stl_mrdt_result, malaria_film_result_d1, malaria_film_grade_d1, malaria_film_result_d90, malaria_film_grade_d90, hemocue_result, wfh_zscore, muac, sicklecell_test_result, hiv_exposed, hiv_test, hivtest_result, PCR_pos, Salmonella_bin, salm_fact)) %>% 
   mutate(sicklecell_test_result = ifelse(sicklecell_test_result=="", NA,sicklecell_test_result),
          hiv_exposed = ifelse(hiv_exposed=="", NA,hiv_exposed),
@@ -245,6 +256,19 @@ master %>%
   # reduce font size to make table fit. 
   # you may also use the `latex_options = "scale_down"` argument here.
   kableExtra::kable_styling(latex_options = "scale_down", position='float_left') 
+
+descript
+# # Convert to gt table to modify styling
+# gt_tbl <- as_gt(descript)
+# 
+# # Modify the font style in the table
+# gt_tbl <- gt_tbl %>%
+#   tab_style(
+#     style = list(
+#       cell_text(font = "Times New Roman")   # Change font to 'Times New Roman'
+#     ),
+#     locations = cells_body()               # Apply to the body of the table
+#   )
 ```
 
 \newpage
@@ -295,7 +319,11 @@ sum_tab %>%
     PCR_pos_percent = "Salmonella PCR+ (%)",
     sum_sal_pos = "Salmonella Culture+ (n)",
     Salm_pos_percent = "Salmonella Culture+ (%)"
-    ) #%>% 
+    ) %>% 
+  font(fontname = "Times New Roman", part = "body") %>% 
+  font(fontname = "Times New Roman", part = "header")
+
+#%>% 
    # gdtools::register_gfont(family="Roboto")
   # merge_v(j = ~ cluster) %>% 
   # align(align = "center", part = "body")
@@ -324,7 +352,7 @@ sum_tab %>%
 ```
 ### Epidemiology of enteric non-typhoidal salmonella
 
-*Salmonella* was detected in stools on microbiological culture in `{r} sum_stool_all$sum_sal_pos` of `{r} sum_stool_all$sum_stool_tested` (`{r} sum_stool_all$Salm_pos_percent` %) in healthy children at an average age of `{r} sum_stool_all$age_mean_stool` (SD: `{r} sum_stool_all$age_sd_stool`) months. Using pan-salmonella (TTR primer) PCR was positive in `{r} sum_stool_all$sum_pcr_pos` of `{r} sum_stool_all$sum_pcr_tested` (`{r} sum_stool_all$PCR_pos_percent` %) stools tested. The proportion of children with *salmonella* positive stools increased with age, ranging from `{r} min_age_PCR$Salm_pos_percent`% PCR positive at a mean age of `{r} min_age_PCR$age_mean_stool` months and `{r} min_age_stool$Salm_pos_percent`% culture positive at `{r} min_age_stool$age_mean_stool` months, to `{r} max_age_PCR$Salm_pos_percent`% PCR positive at a mean age of `{r} max_age_PCR$age_mean_stool` months and `{r} max_age_stool$Salm_pos_percent`% culture positive at `{r} max_age_stool$age_mean_stool` months (@tbl-stool3m_sum, @fig-stool3m). The percentage of stools that were salmonella culture and PCR positive by month of sample collection is shown in @fig-stoolseason . The months with the lowest percentages of children with salmonella culture positive stools was `{r} min_mth_stool$Salm_pos_percent`% in `{r} min_mth_stool$month_yrfull` and for PCR positive stools was `{r} min_mth_PCR$PCR_pos_percent`%, in `{r} min_mth_PCR$month_yrfull`. The months that had the highest salmonella culture positive stools was `{r} max_mth_stool$Salm_pos_percent`% in `{r} max_mth_stool$month_yrfull` and for PCR positive stools was `{r} max_mth_PCR$PCR_pos_percent`% in `{r} max_mth_PCR$month_yrfull`. Genome sequencing results were available for a subset of xx NTS isolates.
+*Salmonella* was detected in stools on microbiological culture in `{r} sum_stool_all$sum_sal_pos` of `{r} sum_stool_all$sum_stool_tested` (`{r} sum_stool_all$Salm_pos_percent` %) in healthy children at an average age of `{r} sum_stool_all$age_mean_stool` (SD: `{r} sum_stool_all$age_sd_stool`) months. Using pan-salmonella (TTR primer) PCR was positive in `{r} sum_stool_all$sum_pcr_pos` of `{r} sum_stool_all$sum_pcr_tested` (`{r} sum_stool_all$PCR_pos_percent` %) stools tested. The proportion of children with *salmonella* positive stools increased with age, ranging from `{r} min_age_PCR$Salm_pos_percent`% PCR positive at a mean age of `{r} min_age_PCR$age_mean_stool` months and `{r} min_age_stool$Salm_pos_percent`% culture positive at `{r} min_age_stool$age_mean_stool` months, to `{r} max_age_PCR$Salm_pos_percent`% PCR positive at a mean age of `{r} max_age_PCR$age_mean_stool` months and `{r} max_age_stool$Salm_pos_percent`% culture positive at `{r} max_age_stool$age_mean_stool` months (@tbl-stool3m_sum, @fig-stool3m). The percentage of stools that were salmonella culture and PCR positive by month of sample collection is shown in @fig-stoolseason . The months with the lowest percentages of children with salmonella culture positive stools was `{r} min_mth_stool$Salm_pos_percent`% in `{r} min_mth_stool$month_yrfull` and for PCR positive stools was `{r} min_mth_PCR$PCR_pos_percent`%, in `{r} min_mth_PCR$month_yrfull`. The months that had the highest salmonella culture positive stools was `{r} max_mth_stool$Salm_pos_percent`% in `{r} max_mth_stool$month_yrfull` and for PCR positive stools was `{r} max_mth_PCR$PCR_pos_percent`% in `{r} max_mth_PCR$month_yrfull`. Genome sequencing results were available for a subset of `{r} seq_sum_total$count_tot` NTS isolates, of which `{r} tot_ent$count_tot` were Salmonella enterica subspecies enterica (subspecies II) and `{r} tot_sal$count_tot` were Salmonella enterica subspecies salamae (subspecies II) . Those isolates identified as Salmonella enterica subspecies salamae (subspecies II) were `{r} O9_sal$count` (`{r}  O9_ent$percent`%) identified with O9 antigen, and `{r} O4_sal$count` (`{r} O4_sal$percent`%) with O4 antigen. Those isolates identified as Salmonella enterica subspecies enterica (subspecies II) were `{r} O9_ent$count` (`{r} O9_ent$percent` %) identified with O9 antigen, and `{r} O4_ent$count` (`{r} O4_ent$percent` %) with O4 antigen. Full list of serovars are shown in @tbl-seqdat_all.
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE, fig.align = "centre", fig.width = 5.5, fig.height=4.5, out.width = "6in"}
 #| fig-cap: Percentage of children in each 3 month age group with A. Salmonella positive stool culture and B. Salmonella TTR PCR positive.
@@ -418,12 +446,18 @@ flextable(seq_sum_ent) %>%
   add_header_row(values=c("Salmonella enterica subspecies enterica (subspecies II)", "", "")) %>% 
   fontsize(size=8, part = "body") %>%
   fontsize(size=8, part = "header") %>%
+  set_header_labels(
+    count = "N",
+    percent = "Percent (%)") %>% 
   autofit()    
 
 flextable(seq_sum_sal) %>%
   add_header_row(values=c("Salmonella enterica subspecies salamae (subspecies II)", "", "")) %>% 
   fontsize(size=8, part = "body") %>%
   fontsize(size=8, part = "header") %>%
+  set_header_labels(
+    count = "N",
+    percent = "Percent (%)") %>% 
   autofit()
 ```
 
